added china to unverified media list

--- a/unverified_media_list/htmlhelpers/iceland.html
+++ b/unverified_media_list/htmlhelpers/iceland.html
@@ -95,189 +95,189 @@ iceland
 <h2>Unverified List</h2>
 
 
-<div id="f8f069">
+<div id="da4b92">
     <a href="http://andriki.is/" target="_blank">http://andriki.is/</a>
-    <span class="clickable" onclick="golocal('#f8f069');">local</span>
-    <span class="clickable" onclick="gonational('#f8f069');">national</span>
-    <span class="clickable" onclick="goblog('#f8f069');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#f8f069');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#f8f069', 'http://andriki.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#da4b92');">local</span>
+    <span class="clickable" onclick="gonational('#da4b92');">national</span>
+    <span class="clickable" onclick="goblog('#da4b92');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#da4b92');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#da4b92', 'http://andriki.is/');">show now</span>
 </div>
 
 
 
-<div id="d08aa8">
+<div id="77de68">
     <a href="http://enewspr.dk/" target="_blank">http://enewspr.dk/</a>
-    <span class="clickable" onclick="golocal('#d08aa8');">local</span>
-    <span class="clickable" onclick="gonational('#d08aa8');">national</span>
-    <span class="clickable" onclick="goblog('#d08aa8');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#d08aa8');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#d08aa8', 'http://enewspr.dk/');">show now</span>
+    <span class="clickable" onclick="golocal('#77de68');">local</span>
+    <span class="clickable" onclick="gonational('#77de68');">national</span>
+    <span class="clickable" onclick="goblog('#77de68');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#77de68');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#77de68', 'http://enewspr.dk/');">show now</span>
 </div>
 
 
 
-<div id="ccbbda">
+<div id="1b6453">
     <a href="http://eyjar.net/forsida/" target="_blank">http://eyjar.net/forsida/</a>
-    <span class="clickable" onclick="golocal('#ccbbda');">local</span>
-    <span class="clickable" onclick="gonational('#ccbbda');">national</span>
-    <span class="clickable" onclick="goblog('#ccbbda');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#ccbbda');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ccbbda', 'http://eyjar.net/forsida/');">show now</span>
+    <span class="clickable" onclick="golocal('#1b6453');">local</span>
+    <span class="clickable" onclick="gonational('#1b6453');">national</span>
+    <span class="clickable" onclick="goblog('#1b6453');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#1b6453');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#1b6453', 'http://eyjar.net/forsida/');">show now</span>
 </div>
 
 
 
-<div id="ccb4ef">
+<div id="ac3478">
     <a href="http://icelandreview.com/" target="_blank">http://icelandreview.com/</a>
-    <span class="clickable" onclick="golocal('#ccb4ef');">local</span>
-    <span class="clickable" onclick="gonational('#ccb4ef');">national</span>
-    <span class="clickable" onclick="goblog('#ccb4ef');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#ccb4ef');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ccb4ef', 'http://icelandreview.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#ac3478');">local</span>
+    <span class="clickable" onclick="gonational('#ac3478');">national</span>
+    <span class="clickable" onclick="goblog('#ac3478');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#ac3478');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#ac3478', 'http://icelandreview.com/');">show now</span>
 </div>
 
 
 
-<div id="242863">
+<div id="c1dfd9">
     <a href="http://www.bb.is/" target="_blank">http://www.bb.is/</a>
-    <span class="clickable" onclick="golocal('#242863');">local</span>
-    <span class="clickable" onclick="gonational('#242863');">national</span>
-    <span class="clickable" onclick="goblog('#242863');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#242863');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#242863', 'http://www.bb.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#c1dfd9');">local</span>
+    <span class="clickable" onclick="gonational('#c1dfd9');">national</span>
+    <span class="clickable" onclick="goblog('#c1dfd9');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#c1dfd9');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#c1dfd9', 'http://www.bb.is/');">show now</span>
 </div>
 
 
 
-<div id="c1f1b4">
+<div id="902ba3">
     <a href="http://www.dv.is/" target="_blank">http://www.dv.is/</a>
-    <span class="clickable" onclick="golocal('#c1f1b4');">local</span>
-    <span class="clickable" onclick="gonational('#c1f1b4');">national</span>
-    <span class="clickable" onclick="goblog('#c1f1b4');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#c1f1b4');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#c1f1b4', 'http://www.dv.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#902ba3');">local</span>
+    <span class="clickable" onclick="gonational('#902ba3');">national</span>
+    <span class="clickable" onclick="goblog('#902ba3');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#902ba3');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#902ba3', 'http://www.dv.is/');">show now</span>
 </div>
 
 
 
-<div id="8c2871">
+<div id="fe5dbb">
     <a href="http://www.eyjafrettir.is/" target="_blank">http://www.eyjafrettir.is/</a>
-    <span class="clickable" onclick="golocal('#8c2871');">local</span>
-    <span class="clickable" onclick="gonational('#8c2871');">national</span>
-    <span class="clickable" onclick="goblog('#8c2871');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#8c2871');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#8c2871', 'http://www.eyjafrettir.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#fe5dbb');">local</span>
+    <span class="clickable" onclick="gonational('#fe5dbb');">national</span>
+    <span class="clickable" onclick="goblog('#fe5dbb');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#fe5dbb');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#fe5dbb', 'http://www.eyjafrettir.is/');">show now</span>
 </div>
 
 
 
-<div id="0e3f4f">
+<div id="0ade7c">
     <a href="http://www.fjardarposturinn.is/" target="_blank">http://www.fjardarposturinn.is/</a>
-    <span class="clickable" onclick="golocal('#0e3f4f');">local</span>
-    <span class="clickable" onclick="gonational('#0e3f4f');">national</span>
-    <span class="clickable" onclick="goblog('#0e3f4f');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#0e3f4f');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#0e3f4f', 'http://www.fjardarposturinn.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#0ade7c');">local</span>
+    <span class="clickable" onclick="gonational('#0ade7c');">national</span>
+    <span class="clickable" onclick="goblog('#0ade7c');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#0ade7c');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#0ade7c', 'http://www.fjardarposturinn.is/');">show now</span>
 </div>
 
 
 
-<div id="e08f59">
+<div id="b1d578">
     <a href="http://www.grapevine.is/Home/" target="_blank">http://www.grapevine.is/Home/</a>
-    <span class="clickable" onclick="golocal('#e08f59');">local</span>
-    <span class="clickable" onclick="gonational('#e08f59');">national</span>
-    <span class="clickable" onclick="goblog('#e08f59');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#e08f59');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#e08f59', 'http://www.grapevine.is/Home/');">show now</span>
+    <span class="clickable" onclick="golocal('#b1d578');">local</span>
+    <span class="clickable" onclick="gonational('#b1d578');">national</span>
+    <span class="clickable" onclick="goblog('#b1d578');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#b1d578');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#b1d578', 'http://www.grapevine.is/Home/');">show now</span>
 </div>
 
 
 
-<div id="dd4f28">
+<div id="17ba07">
     <a href="http://www.mbl.is/frettir/" target="_blank">http://www.mbl.is/frettir/</a>
-    <span class="clickable" onclick="golocal('#dd4f28');">local</span>
-    <span class="clickable" onclick="gonational('#dd4f28');">national</span>
-    <span class="clickable" onclick="goblog('#dd4f28');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#dd4f28');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#dd4f28', 'http://www.mbl.is/frettir/');">show now</span>
+    <span class="clickable" onclick="golocal('#17ba07');">local</span>
+    <span class="clickable" onclick="gonational('#17ba07');">national</span>
+    <span class="clickable" onclick="goblog('#17ba07');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#17ba07');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#17ba07', 'http://www.mbl.is/frettir/');">show now</span>
 </div>
 
 
 
-<div id="3a69d5">
+<div id="7b5200">
     <a href="http://www.patreksfjordur.is/" target="_blank">http://www.patreksfjordur.is/</a>
-    <span class="clickable" onclick="golocal('#3a69d5');">local</span>
-    <span class="clickable" onclick="gonational('#3a69d5');">national</span>
-    <span class="clickable" onclick="goblog('#3a69d5');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#3a69d5');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#3a69d5', 'http://www.patreksfjordur.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#7b5200');">local</span>
+    <span class="clickable" onclick="gonational('#7b5200');">national</span>
+    <span class="clickable" onclick="goblog('#7b5200');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#7b5200');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#7b5200', 'http://www.patreksfjordur.is/');">show now</span>
 </div>
 
 
 
-<div id="529dc9">
+<div id="bd307a">
     <a href="http://www.skarpur.is/" target="_blank">http://www.skarpur.is/</a>
-    <span class="clickable" onclick="golocal('#529dc9');">local</span>
-    <span class="clickable" onclick="gonational('#529dc9');">national</span>
-    <span class="clickable" onclick="goblog('#529dc9');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#529dc9');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#529dc9', 'http://www.skarpur.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#bd307a');">local</span>
+    <span class="clickable" onclick="gonational('#bd307a');">national</span>
+    <span class="clickable" onclick="goblog('#bd307a');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#bd307a');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#bd307a', 'http://www.skarpur.is/');">show now</span>
 </div>
 
 
 
-<div id="5e1688">
+<div id="fa35e1">
     <a href="http://www.skessuhorn.is/" target="_blank">http://www.skessuhorn.is/</a>
-    <span class="clickable" onclick="golocal('#5e1688');">local</span>
-    <span class="clickable" onclick="gonational('#5e1688');">national</span>
-    <span class="clickable" onclick="goblog('#5e1688');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#5e1688');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#5e1688', 'http://www.skessuhorn.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#fa35e1');">local</span>
+    <span class="clickable" onclick="gonational('#fa35e1');">national</span>
+    <span class="clickable" onclick="goblog('#fa35e1');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#fa35e1');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#fa35e1', 'http://www.skessuhorn.is/');">show now</span>
 </div>
 
 
 
-<div id="422b7e">
+<div id="f1abd6">
     <a href="http://www.sport.is/" target="_blank">http://www.sport.is/</a>
-    <span class="clickable" onclick="golocal('#422b7e');">local</span>
-    <span class="clickable" onclick="gonational('#422b7e');">national</span>
-    <span class="clickable" onclick="goblog('#422b7e');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#422b7e');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#422b7e', 'http://www.sport.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#f1abd6');">local</span>
+    <span class="clickable" onclick="gonational('#f1abd6');">national</span>
+    <span class="clickable" onclick="goblog('#f1abd6');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#f1abd6');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#f1abd6', 'http://www.sport.is/');">show now</span>
 </div>
 
 
 
-<div id="b30210">
+<div id="1574bd">
     <a href="http://www.touristguide.is/" target="_blank">http://www.touristguide.is/</a>
-    <span class="clickable" onclick="golocal('#b30210');">local</span>
-    <span class="clickable" onclick="gonational('#b30210');">national</span>
-    <span class="clickable" onclick="goblog('#b30210');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#b30210');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#b30210', 'http://www.touristguide.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#1574bd');">local</span>
+    <span class="clickable" onclick="gonational('#1574bd');">national</span>
+    <span class="clickable" onclick="goblog('#1574bd');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#1574bd');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#1574bd', 'http://www.touristguide.is/');">show now</span>
 </div>
 
 
 
-<div id="ae10c1">
+<div id="0716d9">
     <a href="http://www.vf.is/" target="_blank">http://www.vf.is/</a>
-    <span class="clickable" onclick="golocal('#ae10c1');">local</span>
-    <span class="clickable" onclick="gonational('#ae10c1');">national</span>
-    <span class="clickable" onclick="goblog('#ae10c1');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#ae10c1');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ae10c1', 'http://www.vf.is/');">show now</span>
+    <span class="clickable" onclick="golocal('#0716d9');">local</span>
+    <span class="clickable" onclick="gonational('#0716d9');">national</span>
+    <span class="clickable" onclick="goblog('#0716d9');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#0716d9');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#0716d9', 'http://www.vf.is/');">show now</span>
 </div>
 
 
 
-<div id="ea7bea">
+<div id="9e6a55">
     <a href="http://www.visir.is" target="_blank">http://www.visir.is</a>
-    <span class="clickable" onclick="golocal('#ea7bea');">local</span>
-    <span class="clickable" onclick="gonational('#ea7bea');">national</span>
-    <span class="clickable" onclick="goblog('#ea7bea');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#ea7bea');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ea7bea', 'http://www.visir.is');">show now</span>
+    <span class="clickable" onclick="golocal('#9e6a55');">local</span>
+    <span class="clickable" onclick="gonational('#9e6a55');">national</span>
+    <span class="clickable" onclick="goblog('#9e6a55');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#9e6a55');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#9e6a55', 'http://www.visir.is');">show now</span>
 </div>
 
 
