--- a/unverified_media_list/htmlhelpers/luxemburg.html
+++ b/unverified_media_list/htmlhelpers/luxemburg.html
@@ -95,68 +95,68 @@ luxemburg
 <h2>Unverified List</h2>
 
 
-<div id="909abe">
+<div id="da4b92">
     <a href="http://fuze.lu/" target="_blank">http://fuze.lu/</a>
-    <span class="clickable" onclick="golocal('#909abe');">local</span>
-    <span class="clickable" onclick="gonational('#909abe');">national</span>
-    <span class="clickable" onclick="goblog('#909abe');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#909abe');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#909abe', 'http://fuze.lu/');">show now</span>
+    <span class="clickable" onclick="golocal('#da4b92');">local</span>
+    <span class="clickable" onclick="gonational('#da4b92');">national</span>
+    <span class="clickable" onclick="goblog('#da4b92');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#da4b92');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#da4b92', 'http://fuze.lu/');">show now</span>
 </div>
 
 
 
-<div id="0f3de9">
+<div id="77de68">
     <a href="http://www.duluxembourg.com" target="_blank">http://www.duluxembourg.com</a>
-    <span class="clickable" onclick="golocal('#0f3de9');">local</span>
-    <span class="clickable" onclick="gonational('#0f3de9');">national</span>
-    <span class="clickable" onclick="goblog('#0f3de9');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#0f3de9');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#0f3de9', 'http://www.duluxembourg.com');">show now</span>
+    <span class="clickable" onclick="golocal('#77de68');">local</span>
+    <span class="clickable" onclick="gonational('#77de68');">national</span>
+    <span class="clickable" onclick="goblog('#77de68');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#77de68');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#77de68', 'http://www.duluxembourg.com');">show now</span>
 </div>
 
 
 
-<div id="fd20fe">
+<div id="1b6453">
     <a href="http://www.expatica.lu/" target="_blank">http://www.expatica.lu/</a>
-    <span class="clickable" onclick="golocal('#fd20fe');">local</span>
-    <span class="clickable" onclick="gonational('#fd20fe');">national</span>
-    <span class="clickable" onclick="goblog('#fd20fe');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#fd20fe');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#fd20fe', 'http://www.expatica.lu/');">show now</span>
+    <span class="clickable" onclick="golocal('#1b6453');">local</span>
+    <span class="clickable" onclick="gonational('#1b6453');">national</span>
+    <span class="clickable" onclick="goblog('#1b6453');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#1b6453');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#1b6453', 'http://www.expatica.lu/');">show now</span>
 </div>
 
 
 
-<div id="802c42">
+<div id="ac3478">
     <a href="http://www.luxemburgerrundschau.com/" target="_blank">http://www.luxemburgerrundschau.com/</a>
-    <span class="clickable" onclick="golocal('#802c42');">local</span>
-    <span class="clickable" onclick="gonational('#802c42');">national</span>
-    <span class="clickable" onclick="goblog('#802c42');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#802c42');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#802c42', 'http://www.luxemburgerrundschau.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#ac3478');">local</span>
+    <span class="clickable" onclick="gonational('#ac3478');">national</span>
+    <span class="clickable" onclick="goblog('#ac3478');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#ac3478');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#ac3478', 'http://www.luxemburgerrundschau.com/');">show now</span>
 </div>
 
 
 
-<div id="ba9758">
+<div id="c1dfd9">
     <a href="http://www.tageblatt.lu/" target="_blank">http://www.tageblatt.lu/</a>
-    <span class="clickable" onclick="golocal('#ba9758');">local</span>
-    <span class="clickable" onclick="gonational('#ba9758');">national</span>
-    <span class="clickable" onclick="goblog('#ba9758');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#ba9758');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ba9758', 'http://www.tageblatt.lu/');">show now</span>
+    <span class="clickable" onclick="golocal('#c1dfd9');">local</span>
+    <span class="clickable" onclick="gonational('#c1dfd9');">national</span>
+    <span class="clickable" onclick="goblog('#c1dfd9');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#c1dfd9');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#c1dfd9', 'http://www.tageblatt.lu/');">show now</span>
 </div>
 
 
 
-<div id="ecc03b">
+<div id="902ba3">
     <a href="http://www.wort.lu" target="_blank">http://www.wort.lu</a>
-    <span class="clickable" onclick="golocal('#ecc03b');">local</span>
-    <span class="clickable" onclick="gonational('#ecc03b');">national</span>
-    <span class="clickable" onclick="goblog('#ecc03b');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#ecc03b');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ecc03b', 'http://www.wort.lu');">show now</span>
+    <span class="clickable" onclick="golocal('#902ba3');">local</span>
+    <span class="clickable" onclick="gonational('#902ba3');">national</span>
+    <span class="clickable" onclick="goblog('#902ba3');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#902ba3');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#902ba3', 'http://www.wort.lu');">show now</span>
 </div>
 
 
