--- a/unverified_media_list/htmlhelpers/tunisia.html
+++ b/unverified_media_list/htmlhelpers/tunisia.html
@@ -95,222 +95,222 @@ tunisia
 <h2>Unverified List</h2>
 
 
-<div id="f2cd32">
+<div id="da4b92">
     <a href="http://3ichnews.eb2a.com" target="_blank">http://3ichnews.eb2a.com</a>
-    <span class="clickable" onclick="golocal('#f2cd32');">local</span>
-    <span class="clickable" onclick="gonational('#f2cd32');">national</span>
-    <span class="clickable" onclick="goblog('#f2cd32');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#f2cd32');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#f2cd32', 'http://3ichnews.eb2a.com');">show now</span>
+    <span class="clickable" onclick="golocal('#da4b92');">local</span>
+    <span class="clickable" onclick="gonational('#da4b92');">national</span>
+    <span class="clickable" onclick="goblog('#da4b92');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#da4b92');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#da4b92', 'http://3ichnews.eb2a.com');">show now</span>
 </div>
 
 
 
-<div id="4fb19f">
+<div id="77de68">
     <a href="http://ww17.elilane.com/" target="_blank">http://ww17.elilane.com/</a>
-    <span class="clickable" onclick="golocal('#4fb19f');">local</span>
-    <span class="clickable" onclick="gonational('#4fb19f');">national</span>
-    <span class="clickable" onclick="goblog('#4fb19f');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#4fb19f');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#4fb19f', 'http://ww17.elilane.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#77de68');">local</span>
+    <span class="clickable" onclick="gonational('#77de68');">national</span>
+    <span class="clickable" onclick="goblog('#77de68');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#77de68');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#77de68', 'http://ww17.elilane.com/');">show now</span>
 </div>
 
 
 
-<div id="4728c8">
+<div id="1b6453">
     <a href="http://ww43.alfajrnews.net/" target="_blank">http://ww43.alfajrnews.net/</a>
-    <span class="clickable" onclick="golocal('#4728c8');">local</span>
-    <span class="clickable" onclick="gonational('#4728c8');">national</span>
-    <span class="clickable" onclick="goblog('#4728c8');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#4728c8');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#4728c8', 'http://ww43.alfajrnews.net/');">show now</span>
+    <span class="clickable" onclick="golocal('#1b6453');">local</span>
+    <span class="clickable" onclick="gonational('#1b6453');">national</span>
+    <span class="clickable" onclick="goblog('#1b6453');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#1b6453');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#1b6453', 'http://ww43.alfajrnews.net/');">show now</span>
 </div>
 
 
 
-<div id="10994e">
+<div id="ac3478">
     <a href="http://www.africanmanager.com/" target="_blank">http://www.africanmanager.com/</a>
-    <span class="clickable" onclick="golocal('#10994e');">local</span>
-    <span class="clickable" onclick="gonational('#10994e');">national</span>
-    <span class="clickable" onclick="goblog('#10994e');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#10994e');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#10994e', 'http://www.africanmanager.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#ac3478');">local</span>
+    <span class="clickable" onclick="gonational('#ac3478');">national</span>
+    <span class="clickable" onclick="goblog('#ac3478');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#ac3478');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#ac3478', 'http://www.africanmanager.com/');">show now</span>
 </div>
 
 
 
-<div id="18cbc9">
+<div id="c1dfd9">
     <a href="http://www.akhbar.tn/" target="_blank">http://www.akhbar.tn/</a>
-    <span class="clickable" onclick="golocal('#18cbc9');">local</span>
-    <span class="clickable" onclick="gonational('#18cbc9');">national</span>
-    <span class="clickable" onclick="goblog('#18cbc9');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#18cbc9');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#18cbc9', 'http://www.akhbar.tn/');">show now</span>
+    <span class="clickable" onclick="golocal('#c1dfd9');">local</span>
+    <span class="clickable" onclick="gonational('#c1dfd9');">national</span>
+    <span class="clickable" onclick="goblog('#c1dfd9');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#c1dfd9');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#c1dfd9', 'http://www.akhbar.tn/');">show now</span>
 </div>
 
 
 
-<div id="5e01dc">
+<div id="902ba3">
     <a href="http://www.alanouar.com/" target="_blank">http://www.alanouar.com/</a>
-    <span class="clickable" onclick="golocal('#5e01dc');">local</span>
-    <span class="clickable" onclick="gonational('#5e01dc');">national</span>
-    <span class="clickable" onclick="goblog('#5e01dc');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#5e01dc');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#5e01dc', 'http://www.alanouar.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#902ba3');">local</span>
+    <span class="clickable" onclick="gonational('#902ba3');">national</span>
+    <span class="clickable" onclick="goblog('#902ba3');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#902ba3');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#902ba3', 'http://www.alanouar.com/');">show now</span>
 </div>
 
 
 
-<div id="cfb8fd">
+<div id="fe5dbb">
     <a href="http://www.alanouar.com/" target="_blank">http://www.alanouar.com/</a>
-    <span class="clickable" onclick="golocal('#cfb8fd');">local</span>
-    <span class="clickable" onclick="gonational('#cfb8fd');">national</span>
-    <span class="clickable" onclick="goblog('#cfb8fd');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#cfb8fd');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#cfb8fd', 'http://www.alanouar.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#fe5dbb');">local</span>
+    <span class="clickable" onclick="gonational('#fe5dbb');">national</span>
+    <span class="clickable" onclick="goblog('#fe5dbb');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#fe5dbb');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#fe5dbb', 'http://www.alanouar.com/');">show now</span>
 </div>
 
 
 
-<div id="67e501">
+<div id="0ade7c">
     <a href="http://www.alchourouk.com/" target="_blank">http://www.alchourouk.com/</a>
-    <span class="clickable" onclick="golocal('#67e501');">local</span>
-    <span class="clickable" onclick="gonational('#67e501');">national</span>
-    <span class="clickable" onclick="goblog('#67e501');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#67e501');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#67e501', 'http://www.alchourouk.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#0ade7c');">local</span>
+    <span class="clickable" onclick="gonational('#0ade7c');">national</span>
+    <span class="clickable" onclick="goblog('#0ade7c');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#0ade7c');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#0ade7c', 'http://www.alchourouk.com/');">show now</span>
 </div>
 
 
 
-<div id="dbe5eb">
+<div id="b1d578">
     <a href="http://www.almoussawar.com/" target="_blank">http://www.almoussawar.com/</a>
-    <span class="clickable" onclick="golocal('#dbe5eb');">local</span>
-    <span class="clickable" onclick="gonational('#dbe5eb');">national</span>
-    <span class="clickable" onclick="goblog('#dbe5eb');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#dbe5eb');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#dbe5eb', 'http://www.almoussawar.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#b1d578');">local</span>
+    <span class="clickable" onclick="gonational('#b1d578');">national</span>
+    <span class="clickable" onclick="goblog('#b1d578');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#b1d578');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#b1d578', 'http://www.almoussawar.com/');">show now</span>
 </div>
 
 
 
-<div id="350d89">
+<div id="17ba07">
     <a href="http://www.assabah.com.tn/" target="_blank">http://www.assabah.com.tn/</a>
-    <span class="clickable" onclick="golocal('#350d89');">local</span>
-    <span class="clickable" onclick="gonational('#350d89');">national</span>
-    <span class="clickable" onclick="goblog('#350d89');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#350d89');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#350d89', 'http://www.assabah.com.tn/');">show now</span>
+    <span class="clickable" onclick="golocal('#17ba07');">local</span>
+    <span class="clickable" onclick="gonational('#17ba07');">national</span>
+    <span class="clickable" onclick="goblog('#17ba07');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#17ba07');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#17ba07', 'http://www.assabah.com.tn/');">show now</span>
 </div>
 
 
 
-<div id="124bc1">
+<div id="7b5200">
     <a href="http://www.ati.tn/" target="_blank">http://www.ati.tn/</a>
-    <span class="clickable" onclick="golocal('#124bc1');">local</span>
-    <span class="clickable" onclick="gonational('#124bc1');">national</span>
-    <span class="clickable" onclick="goblog('#124bc1');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#124bc1');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#124bc1', 'http://www.ati.tn/');">show now</span>
+    <span class="clickable" onclick="golocal('#7b5200');">local</span>
+    <span class="clickable" onclick="gonational('#7b5200');">national</span>
+    <span class="clickable" onclick="goblog('#7b5200');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#7b5200');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#7b5200', 'http://www.ati.tn/');">show now</span>
 </div>
 
 
 
-<div id="091646">
+<div id="bd307a">
     <a href="http://www.echaab.info.tn/" target="_blank">http://www.echaab.info.tn/</a>
-    <span class="clickable" onclick="golocal('#091646');">local</span>
-    <span class="clickable" onclick="gonational('#091646');">national</span>
-    <span class="clickable" onclick="goblog('#091646');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#091646');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#091646', 'http://www.echaab.info.tn/');">show now</span>
+    <span class="clickable" onclick="golocal('#bd307a');">local</span>
+    <span class="clickable" onclick="gonational('#bd307a');">national</span>
+    <span class="clickable" onclick="goblog('#bd307a');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#bd307a');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#bd307a', 'http://www.echaab.info.tn/');">show now</span>
 </div>
 
 
 
-<div id="bac413">
+<div id="fa35e1">
     <a href="http://www.elbayane.tn/" target="_blank">http://www.elbayane.tn/</a>
-    <span class="clickable" onclick="golocal('#bac413');">local</span>
-    <span class="clickable" onclick="gonational('#bac413');">national</span>
-    <span class="clickable" onclick="goblog('#bac413');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#bac413');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#bac413', 'http://www.elbayane.tn/');">show now</span>
+    <span class="clickable" onclick="golocal('#fa35e1');">local</span>
+    <span class="clickable" onclick="gonational('#fa35e1');">national</span>
+    <span class="clickable" onclick="goblog('#fa35e1');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#fa35e1');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#fa35e1', 'http://www.elbayane.tn/');">show now</span>
 </div>
 
 
 
-<div id="60b61f">
+<div id="f1abd6">
     <a href="http://www.essahafa.info.tn/aloula/index.html" target="_blank">http://www.essahafa.info.tn/aloula/index.html</a>
-    <span class="clickable" onclick="golocal('#60b61f');">local</span>
-    <span class="clickable" onclick="gonational('#60b61f');">national</span>
-    <span class="clickable" onclick="goblog('#60b61f');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#60b61f');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#60b61f', 'http://www.essahafa.info.tn/aloula/index.html');">show now</span>
+    <span class="clickable" onclick="golocal('#f1abd6');">local</span>
+    <span class="clickable" onclick="gonational('#f1abd6');">national</span>
+    <span class="clickable" onclick="goblog('#f1abd6');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#f1abd6');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#f1abd6', 'http://www.essahafa.info.tn/aloula/index.html');">show now</span>
 </div>
 
 
 
-<div id="7832de">
+<div id="1574bd">
     <a href="http://www.lapresse.tn/" target="_blank">http://www.lapresse.tn/</a>
-    <span class="clickable" onclick="golocal('#7832de');">local</span>
-    <span class="clickable" onclick="gonational('#7832de');">national</span>
-    <span class="clickable" onclick="goblog('#7832de');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#7832de');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#7832de', 'http://www.lapresse.tn/');">show now</span>
+    <span class="clickable" onclick="golocal('#1574bd');">local</span>
+    <span class="clickable" onclick="gonational('#1574bd');">national</span>
+    <span class="clickable" onclick="goblog('#1574bd');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#1574bd');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#1574bd', 'http://www.lapresse.tn/');">show now</span>
 </div>
 
 
 
-<div id="099210">
+<div id="0716d9">
     <a href="http://www.leconomistemaghrebin.com/" target="_blank">http://www.leconomistemaghrebin.com/</a>
-    <span class="clickable" onclick="golocal('#099210');">local</span>
-    <span class="clickable" onclick="gonational('#099210');">national</span>
-    <span class="clickable" onclick="goblog('#099210');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#099210');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#099210', 'http://www.leconomistemaghrebin.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#0716d9');">local</span>
+    <span class="clickable" onclick="gonational('#0716d9');">national</span>
+    <span class="clickable" onclick="goblog('#0716d9');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#0716d9');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#0716d9', 'http://www.leconomistemaghrebin.com/');">show now</span>
 </div>
 
 
 
-<div id="1afbf0">
+<div id="9e6a55">
     <a href="http://www.lequotidien-tn.com/" target="_blank">http://www.lequotidien-tn.com/</a>
-    <span class="clickable" onclick="golocal('#1afbf0');">local</span>
-    <span class="clickable" onclick="gonational('#1afbf0');">national</span>
-    <span class="clickable" onclick="goblog('#1afbf0');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#1afbf0');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#1afbf0', 'http://www.lequotidien-tn.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#9e6a55');">local</span>
+    <span class="clickable" onclick="gonational('#9e6a55');">national</span>
+    <span class="clickable" onclick="goblog('#9e6a55');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#9e6a55');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#9e6a55', 'http://www.lequotidien-tn.com/');">show now</span>
 </div>
 
 
 
-<div id="ffc3c2">
+<div id="b3f0c7">
     <a href="http://www.letemps.com.tn/" target="_blank">http://www.letemps.com.tn/</a>
-    <span class="clickable" onclick="golocal('#ffc3c2');">local</span>
-    <span class="clickable" onclick="gonational('#ffc3c2');">national</span>
-    <span class="clickable" onclick="goblog('#ffc3c2');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#ffc3c2');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ffc3c2', 'http://www.letemps.com.tn/');">show now</span>
+    <span class="clickable" onclick="golocal('#b3f0c7');">local</span>
+    <span class="clickable" onclick="gonational('#b3f0c7');">national</span>
+    <span class="clickable" onclick="goblog('#b3f0c7');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#b3f0c7');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#b3f0c7', 'http://www.letemps.com.tn/');">show now</span>
 </div>
 
 
 
-<div id="210d39">
+<div id="91032a">
     <a href="http://www.thetunistimes.com/" target="_blank">http://www.thetunistimes.com/</a>
-    <span class="clickable" onclick="golocal('#210d39');">local</span>
-    <span class="clickable" onclick="gonational('#210d39');">national</span>
-    <span class="clickable" onclick="goblog('#210d39');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#210d39');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#210d39', 'http://www.thetunistimes.com/');">show now</span>
+    <span class="clickable" onclick="golocal('#91032a');">local</span>
+    <span class="clickable" onclick="gonational('#91032a');">national</span>
+    <span class="clickable" onclick="goblog('#91032a');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#91032a');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#91032a', 'http://www.thetunistimes.com/');">show now</span>
 </div>
 
 
 
-<div id="560956">
+<div id="472b07">
     <a href="http://www.tunishebdo.com.tn/" target="_blank">http://www.tunishebdo.com.tn/</a>
-    <span class="clickable" onclick="golocal('#560956');">local</span>
-    <span class="clickable" onclick="gonational('#560956');">national</span>
-    <span class="clickable" onclick="goblog('#560956');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#560956');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#560956', 'http://www.tunishebdo.com.tn/');">show now</span>
+    <span class="clickable" onclick="golocal('#472b07');">local</span>
+    <span class="clickable" onclick="gonational('#472b07');">national</span>
+    <span class="clickable" onclick="goblog('#472b07');">blog</span>
+    <span class="clickable" onclick="justfuckingdeletethisshit('#472b07');">is shit!</span>
+    <span class="clickable show" onclick="openiframe('#472b07', 'http://www.tunishebdo.com.tn/');">show now</span>
 </div>
 
 
