--- a/unverified_media_list/htmlhelpers/syria.html
+++ b/unverified_media_list/htmlhelpers/syria.html
@@ -77,7 +77,7 @@
 <body>
 
 <h1>
-bosnia
+syria
 </h1>
 
 <h2>National List</h2>
@@ -96,166 +96,100 @@ bosnia
 
 
 <div id="da4b92">
-    <a href="http://bosnianmediagroup.com/" target="_blank">http://bosnianmediagroup.com/</a>
+    <a href="http://www.syria-news.com/" target="_blank">http://www.syria-news.com/</a>
     <span class="clickable" onclick="golocal('#da4b92');">local</span>
     <span class="clickable" onclick="gonational('#da4b92');">national</span>
     <span class="clickable" onclick="goblog('#da4b92');">blog</span>
     <span class="clickable" onclick="justfuckingdeletethisshit('#da4b92');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#da4b92', 'http://bosnianmediagroup.com/');">show now</span>
+    <span class="clickable show" onclick="openiframe('#da4b92', 'http://www.syria-news.com/');">show now</span>
 </div>
 
 
 
 <div id="77de68">
-    <a href="http://dnevni-list.ba/web1/" target="_blank">http://dnevni-list.ba/web1/</a>
+    <a href="http://www.syria-news.com/" target="_blank">http://www.syria-news.com/</a>
     <span class="clickable" onclick="golocal('#77de68');">local</span>
     <span class="clickable" onclick="gonational('#77de68');">national</span>
     <span class="clickable" onclick="goblog('#77de68');">blog</span>
     <span class="clickable" onclick="justfuckingdeletethisshit('#77de68');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#77de68', 'http://dnevni-list.ba/web1/');">show now</span>
+    <span class="clickable show" onclick="openiframe('#77de68', 'http://www.syria-news.com/');">show now</span>
 </div>
 
 
 
 <div id="1b6453">
-    <a href="https://www.bhdani.ba/" target="_blank">https://www.bhdani.ba/</a>
+    <a href="http://www.albaladonline.com/ar/Default.aspx?pageid=11730" target="_blank">http://www.albaladonline.com/ar/Default.aspx?pageid=11730</a>
     <span class="clickable" onclick="golocal('#1b6453');">local</span>
     <span class="clickable" onclick="gonational('#1b6453');">national</span>
     <span class="clickable" onclick="goblog('#1b6453');">blog</span>
     <span class="clickable" onclick="justfuckingdeletethisshit('#1b6453');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#1b6453', 'https://www.bhdani.ba/');">show now</span>
+    <span class="clickable show" onclick="openiframe('#1b6453', 'http://www.albaladonline.com/ar/Default.aspx?pageid=11730');">show now</span>
 </div>
 
 
 
 <div id="ac3478">
-    <a href="http://www.avaz.ba/" target="_blank">http://www.avaz.ba/</a>
+    <a href="http://www.champress.net/" target="_blank">http://www.champress.net/</a>
     <span class="clickable" onclick="golocal('#ac3478');">local</span>
     <span class="clickable" onclick="gonational('#ac3478');">national</span>
     <span class="clickable" onclick="goblog('#ac3478');">blog</span>
     <span class="clickable" onclick="justfuckingdeletethisshit('#ac3478');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#ac3478', 'http://www.avaz.ba/');">show now</span>
+    <span class="clickable show" onclick="openiframe('#ac3478', 'http://www.champress.net/');">show now</span>
 </div>
 
 
 
 <div id="c1dfd9">
-    <a href="http://www.balkanchronicle.com/" target="_blank">http://www.balkanchronicle.com/</a>
+    <a href="http://syriaa2z.blogspot.it/" target="_blank">http://syriaa2z.blogspot.it/</a>
     <span class="clickable" onclick="golocal('#c1dfd9');">local</span>
     <span class="clickable" onclick="gonational('#c1dfd9');">national</span>
     <span class="clickable" onclick="goblog('#c1dfd9');">blog</span>
     <span class="clickable" onclick="justfuckingdeletethisshit('#c1dfd9');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#c1dfd9', 'http://www.balkanchronicle.com/');">show now</span>
+    <span class="clickable show" onclick="openiframe('#c1dfd9', 'http://syriaa2z.blogspot.it/');">show now</span>
 </div>
 
 
 
 <div id="902ba3">
-    <a href="http://www.bosnia.org.uk/news/news_list.cfm" target="_blank">http://www.bosnia.org.uk/news/news_list.cfm</a>
+    <a href="http://ncro.sy/baathonline/" target="_blank">http://ncro.sy/baathonline/</a>
     <span class="clickable" onclick="golocal('#902ba3');">local</span>
     <span class="clickable" onclick="gonational('#902ba3');">national</span>
     <span class="clickable" onclick="goblog('#902ba3');">blog</span>
     <span class="clickable" onclick="justfuckingdeletethisshit('#902ba3');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#902ba3', 'http://www.bosnia.org.uk/news/news_list.cfm');">show now</span>
+    <span class="clickable show" onclick="openiframe('#902ba3', 'http://ncro.sy/baathonline/');">show now</span>
 </div>
 
 
 
 <div id="fe5dbb">
-    <a href="http://www.e-novine.net/" target="_blank">http://www.e-novine.net/</a>
+    <a href="http://www.iqtissadiya.com/" target="_blank">http://www.iqtissadiya.com/</a>
     <span class="clickable" onclick="golocal('#fe5dbb');">local</span>
     <span class="clickable" onclick="gonational('#fe5dbb');">national</span>
     <span class="clickable" onclick="goblog('#fe5dbb');">blog</span>
     <span class="clickable" onclick="justfuckingdeletethisshit('#fe5dbb');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#fe5dbb', 'http://www.e-novine.net/');">show now</span>
+    <span class="clickable show" onclick="openiframe('#fe5dbb', 'http://www.iqtissadiya.com/');">show now</span>
 </div>
 
 
 
 <div id="0ade7c">
-    <a href="http://www.glassrpske.com/cyrl/" target="_blank">http://www.glassrpske.com/cyrl/</a>
+    <a href="http://www.tishreen.info/" target="_blank">http://www.tishreen.info/</a>
     <span class="clickable" onclick="golocal('#0ade7c');">local</span>
     <span class="clickable" onclick="gonational('#0ade7c');">national</span>
     <span class="clickable" onclick="goblog('#0ade7c');">blog</span>
     <span class="clickable" onclick="justfuckingdeletethisshit('#0ade7c');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#0ade7c', 'http://www.glassrpske.com/cyrl/');">show now</span>
+    <span class="clickable show" onclick="openiframe('#0ade7c', 'http://www.tishreen.info/');">show now</span>
 </div>
 
 
 
 <div id="b1d578">
-    <a href="http://www.nezavisne.com/" target="_blank">http://www.nezavisne.com/</a>
+    <a href="http://www.periotem.com/" target="_blank">http://www.periotem.com/</a>
     <span class="clickable" onclick="golocal('#b1d578');">local</span>
     <span class="clickable" onclick="gonational('#b1d578');">national</span>
     <span class="clickable" onclick="goblog('#b1d578');">blog</span>
     <span class="clickable" onclick="justfuckingdeletethisshit('#b1d578');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#b1d578', 'http://www.nezavisne.com/');">show now</span>
-</div>
-
-
-
-<div id="17ba07">
-    <a href="http://www.nippljiljan.com/" target="_blank">http://www.nippljiljan.com/</a>
-    <span class="clickable" onclick="golocal('#17ba07');">local</span>
-    <span class="clickable" onclick="gonational('#17ba07');">national</span>
-    <span class="clickable" onclick="goblog('#17ba07');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#17ba07');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#17ba07', 'http://www.nippljiljan.com/');">show now</span>
-</div>
-
-
-
-<div id="7b5200">
-    <a href="http://www.sarajevotimes.com/" target="_blank">http://www.sarajevotimes.com/</a>
-    <span class="clickable" onclick="golocal('#7b5200');">local</span>
-    <span class="clickable" onclick="gonational('#7b5200');">national</span>
-    <span class="clickable" onclick="goblog('#7b5200');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#7b5200');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#7b5200', 'http://www.sarajevotimes.com/');">show now</span>
-</div>
-
-
-
-<div id="bd307a">
-    <a href="http://www.saray.net/Press/" target="_blank">http://www.saray.net/Press/</a>
-    <span class="clickable" onclick="golocal('#bd307a');">local</span>
-    <span class="clickable" onclick="gonational('#bd307a');">national</span>
-    <span class="clickable" onclick="goblog('#bd307a');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#bd307a');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#bd307a', 'http://www.saray.net/Press/');">show now</span>
-</div>
-
-
-
-<div id="fa35e1">
-    <a href="http://www.slobodna-bosna.ba/" target="_blank">http://www.slobodna-bosna.ba/</a>
-    <span class="clickable" onclick="golocal('#fa35e1');">local</span>
-    <span class="clickable" onclick="gonational('#fa35e1');">national</span>
-    <span class="clickable" onclick="goblog('#fa35e1');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#fa35e1');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#fa35e1', 'http://www.slobodna-bosna.ba/');">show now</span>
-</div>
-
-
-
-<div id="f1abd6">
-    <a href="http://www.ultimatum.20m.com/" target="_blank">http://www.ultimatum.20m.com/</a>
-    <span class="clickable" onclick="golocal('#f1abd6');">local</span>
-    <span class="clickable" onclick="gonational('#f1abd6');">national</span>
-    <span class="clickable" onclick="goblog('#f1abd6');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#f1abd6');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#f1abd6', 'http://www.ultimatum.20m.com/');">show now</span>
-</div>
-
-
-
-<div id="1574bd">
-    <a href="http://www.vijesti.ba/" target="_blank">http://www.vijesti.ba/</a>
-    <span class="clickable" onclick="golocal('#1574bd');">local</span>
-    <span class="clickable" onclick="gonational('#1574bd');">national</span>
-    <span class="clickable" onclick="goblog('#1574bd');">blog</span>
-    <span class="clickable" onclick="justfuckingdeletethisshit('#1574bd');">is shit!</span>
-    <span class="clickable show" onclick="openiframe('#1574bd', 'http://www.vijesti.ba/');">show now</span>
+    <span class="clickable show" onclick="openiframe('#b1d578', 'http://www.periotem.com/');">show now</span>
 </div>
 
 
